# attendance-monitoring

./: .gitignore  README.md  api.py  docker-compose.yml  pwMod.py  pyproject.toml  requirements.txt  selMod.py
.github/workflows/: docker-publish.yml
TaskScheduling/: app.py
backend/: Dockerfile  go.mod  go.sum
backend/pb_data/: data.db  logs.db  logs.db-shm  logs.db-wal
backend/pb_migrations/: 1724069190_created_students.js  1724069269_updated_students.js  1724069591_created_attendance.js  1724071077_updated_students.js  1724071090_updated_attendance.js  1724084385_deleted_users.js  1724772995_updated_attendance.js  1724773015_updated_attendance.js  1724773674_updated_attendance.js
cron/: .dockerignore  Dockerfile  main.py  requirements.txt
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/lib/: pocketbase.ts
frontend/src/app/: layout.tsx  page.tsx
web/: Dockerfile  manage.py  requirements.txt
web/AMS/: admin.py  apps.py  auth_backends.py  decorators.py  forms.py  models.py  tasks.py  utils.py  views.py
web/AMS/migrations/: 0001_initial.py  0002_student_ntfy_topic.py  0003_alter_student_ntfy_topic.py  0003_attendance_last_run.py  0004_alter_attendance_last_run.py  0004_alter_student_ntfy_topic.py  0005_attendance_last_run.py  0005_student_ntfy_topic_values.py  0006_alter_attendance_last_run.py  0006_student_ntfy_topic_alter.py  0007_attendance_subject_details.py
web/AMS/templates/: dashboard.html  index.html  login.html  register.html
web/onlyVels/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
