[tool.poetry]
name = "attendance-monitoring"
version = "0.1.0"
description = ""
authors = ["Navaneeth Rao <author@rizexor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
