[tool.poetry]
name = "attendance-monitoring"
version = "0.1.0"
description = ""
authors = ["Navaneeth Rao <author@rizexor.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
celery = {extras = ["redis"], version = "^5.4.0"}
environs = "^11.0.0"
django-celery-beat = "^2.7.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
cryptography = "^43.0.1"
django-storages = {extras = ["s3"], version = "^1.14.4"}
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
pytesseract = "^0.3.13"
playwright = "^1.46.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
